fix: adjust z-indexes and header fixed position

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -18,13 +18,13 @@ a {
 header {
   width: 100%;
   background-color: var(--bg_alt);
-  position: relative;
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 70px;
   padding: 10px 20px;
-  z-index: 2;
+  z-index: 6;
 }
 .logo-wrapper {
   font-family: $f_songbird;
@@ -159,7 +159,7 @@ header {
     gap: 20px;
     transform: scale(0);
     transition: 1s;
-    z-index: 1;
+    z-index: 6;
     border-bottom-left-radius: 10px;
   }
   @media (max-width: 560px) {
