--- a/src/gallery-page/gallery.scss
+++ b/src/gallery-page/gallery.scss
@@ -34,12 +34,12 @@ body {
 }
 main {
   width: 100%;
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh);
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px 8% 80px 8%;
+  padding: 100px 8% 80px 8%;
   //padding-bottom: 80px;
 }
 .gallery-wrapper {
