--- a/src/quiz-page/quiz.scss
+++ b/src/quiz-page/quiz.scss
@@ -39,12 +39,12 @@ body {
 
 main {
   width: 100%;
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh);
   /*  height: calc(100vh - 70px); */
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 80px;
+  padding: 80px 0;
 }
 /* -----------------------next-btn----------------------- */
 .next-btn {
